# higher-school-of-chess

./: .gitignore  King.py  Queen.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  registration.py  requirements.txt
backend/api_v1/: __init__.py
backend/api_v1/auth/: test_utils.py  utils.py
backend/databases/: auth.db  games.db  user.db
backend/db-pkgs/: __init__.py  pyproject.toml
backend/dbpackage/: Base.py  DBHelper.py  Password.py  __init__.py  pyproject.toml  session.py
backend/game/: __init__.py  board.py  chess_game.py  crud.py  game.py  move_handler.py  views.py
backend/pkgs/: README.md  __init__.py  config.py  pyproject.toml
backend/registration/: registration.py
backend/site/: index.html
dbpackage/: Base.py  DBHelper.py  README.md  pyproject.toml  session.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  AuthProvider.jsx  Dashboard.jsx  Game.css  Game.jsx  GameList.jsx  GameSetup.jsx  Login.jsx  LoginForm.jsx  Message (к проекту не относиться).tsx  Register.jsx  RequireAuth.jsx
game/: board.py  chess_game.py  index_notation.py  main.py
game/pieces/: Bishop.py  Knight.py  Pawn.py  Piece.py  Rook.py  bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py  test_pieces.py
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.css  App.jsx  Dashboard.jsx  Game.css  Game.jsx  GameSetup.jsx  Login.jsx  Register.jsx  index.css
pkgs/: config.py  pyproject.toml
report_kt_2/: Отчет.md
(+32 files in other folders)
